Document relationship with ResourceTiming in net::LoadingTimeInfo

Particularly |request_start| and |send_start| ones are confusing,
would like to have some helpful comments somewhere.

R=mmenke@chromium.org

Bug: 813889
Change-Id: I5775dc66576cd20cacc324f524d18bd78d15a8ff
Reviewed-on: https://chromium-review.googlesource.com/974806
Reviewed-by: Matt Menke <mmenke@chromium.org>
Commit-Queue: Kinuko Yasuda <kinuko@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545322}
Former-commit-id: 8b7c105d94786e672dfa43f0e67ee81002c23742